src/components/ListingOfStories/ListingOfStories.css
.listContainer {
  grid-row: 2;
  width: 45%;
  display: flex;
  flex-direction: column;
  flex: 1;
  overflow-y: auto;
  margin-left: auto;
  margin-right: auto;
}

.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  padding: 0.75rem 0;
}

.actions {
  display: flex;
  gap: 1rem;
  padding-bottom: 0.5rem;
}

.btn {
  padding: 0.2rem 0.7rem;
  border-radius: 12px;
  border: none;
  cursor: pointer;
  font-size: 0.85rem;
  font-weight: 600;
  background: rgba(242, 242, 242, 1);
}

.selected {
  background-color: var(--primaryColor);
}

.loadMoreBtn {
  margin-top: 0.75rem;
  background-color: var(--primaryColor);
  padding: 0.75rem 3.5rem;
}

.storiesList {
  padding: 0.25rem 0 1.25rem 0;
  overflow: auto;
}

.stories {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}

.errMessage {
  color: red;
  text-align: center;
  font-weight: 500;
  font-size: 1.15rem;
  padding: 2rem 0;
}

